migration guide updates for new Hotspot app

--- a/docs/mine-hnt/helium-hotspot-app.mdx
+++ b/docs/mine-hnt/helium-hotspot-app.mdx
@@ -16,6 +16,16 @@ Nova Labs (formerly Helium Systems, Inc.) manufactured the first set of Hotspots
 Nova Labs no longer manufacturers Hotspots, but there is now an extensive
 [list of approved manufacturers](/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing/).
 
+:::tip Wallet Functionality
+
+Use the [Helium Wallet app](/wallets/helium-wallet-app) to interact with tokens, take part in
+governance, and all other non Hotspot management functions.
+
+Read the [Migration Guide](/solana/migration/wallet-user#for-helium-app-users) to prepare for the
+Solana Migration.
+
+:::
+
 ## Helium Hotspot App Overview
 
 The Helium app (available for [iOS](https://apps.apple.com/us/app/helium-hotspot/id1450463605) and
