feedback from review

--- a/docs/solana/migration/hotspot-maker.mdx
+++ b/docs/solana/migration/hotspot-maker.mdx
@@ -321,14 +321,15 @@ like to use the library, the setup guide can be found here
 
 :::info
 
-Maker Wallets will need both `SOL` and `DC` for transactions post Migration.
+Maker Wallets will need both `SOL` for transactions on the Solana blockchain and `DC` for onboarding
+fees post Migration.
 
 :::
 
 ### Maker Wallet SOL
 
-Maker Wallets will need `SOL` to pay transaction fees and for minting new merkle trees if creating
-double the current amount of Hotspots in their existing fleet.
+Maker Wallets will need `SOL` to pay transaction fees and for minting new Hotspot NFTs. Note that
+minting is only required if Makers are attempting to mint more than 2x their existing fleet size.
 
 - For most makers, ~10 SOL is recommended.
 - Makers with large fleets (300k+ Hotspots) ~60 SOL is recommended.
@@ -350,7 +351,7 @@ double the current amount of Hotspots in their existing fleet.
 
 ### Maker Wallet DC
 
-Maker Wallets will need `DC` to pay onboarding and assert fees. DC can be aquired by either
+Maker Wallets will need `DC` to pay Helium onboarding and assert fees. DC can be aquired by either
 
 - Depositing DC into the Maker Wallet on the current Helium L1.
 - Use the Helium Wallet App to swap HNT for DC.
