mint calculation tables

--- a/docs/solana/migration/hotspot-maker.mdx
+++ b/docs/solana/migration/hotspot-maker.mdx
@@ -333,11 +333,22 @@ minting is only required if Makers are attempting to mint more than 2x their exi
 
 - For most makers, ~10 SOL is recommended.
 - Makers with large fleets (300k+ Hotspots) ~60 SOL is recommended.
-- For more insight to the amount of SOL needed, check out
-  [https://compressed.app/](https://compressed.app/)
-  - Enter the number of Hotspots to mint in the `How many compressed NFTs do you want to store?`
-    field.
-  - The `Uncompressed equivalent` value is a good approximation, round up when in doubt.
+
+#### Minting Cost Examples
+
+| Hotspots to Mint | SOL Needed |
+| ---------------: | ---------: |
+|           25,000 |   ~14.8324 |
+|           50,000 |   ~29.4431 |
+|           75,000 |   ~58.6499 |
+|          100,000 |   ~58.6499 |
+
+For more insight to the amount of SOL needed, check out
+[https://compressed.app/](https://compressed.app/)
+
+- Enter the number of Hotspots to mint in the `How many compressed NFTs do you want to store?`
+  field.
+- The `Most composable, highest cost` value is a good approximation, round up when in doubt.
 
 <div className="img-center">
   <img
@@ -347,7 +358,7 @@ minting is only required if Makers are attempting to mint more than 2x their exi
   />
 </div>
 
-> Minting 10,000 Hotspots would require ~1.134 SOL in this example.
+> Minting 100,000 Hotspots would require ~58.6499 SOL in this example.
 
 ### Maker Wallet DC
 
