--- a/docs/solana/migration/validator-operator.mdx
+++ b/docs/solana/migration/validator-operator.mdx
@@ -258,4 +258,4 @@ period for any reason.
 Yes, a constant rolling lock-up period will be the default option called Constant Lock-up. The decay
 countdown start point will be positive action needed to start the lock-up cooldown period.
 
-Validator owners will be automatically staked for six years with a Constant lock-up.
+Validator owners will be automatically staked for six months with a Constant lock-up.
