change 7d landrush to 10

--- a/docs/mine-hnt/validators/validators-and-voting-power.mdx
+++ b/docs/mine-hnt/validators/validators-and-voting-power.mdx
@@ -236,13 +236,13 @@ Check out a [DAO beta view](https://dao-beta.mango.markets/dao/MNGO) on Realms t
 
 ### Is There a Staking "Genesis" Period?
 
-For the first seven days after Helium's migration onto Solana, there will be a 3x multiplier bonus
+For the first ten days after Helium's migration onto Solana, there will be a 3x multiplier bonus
 for new veHNT stakers. This is called the "Landrush" multiplier.
 
-New stakers are only eligible to receive this veHNT bonus during the initial seven-day Landrush
+New stakers are only eligible to receive this veHNT bonus during the initial ten-day Landrush
 period. HNT staked after this period will receive veHNT at the normal rate with no multiplier.
 
-This landrush period will end at 23:59:59 UTC time on 25th April 2023
+This landrush period will end at 23:59:59 UTC on April 28, 2023.
 
 For example:
 
@@ -253,10 +253,10 @@ For example:
 > Staking 20 HNT during this Landrush period with a lock duration of 24 months returns 3000 veHNT
 > (20x50x3), and at the end of the staking period, 20 HNT is returned to the wallet.
 
-Validator owners can also take advantage of the 7 day bonus period and get the 3x bonus reapplied if
+Validator owners can also take advantage of the 10 day bonus period and get the 3x bonus reapplied if
 they extend their default 6 month lock-up period. This 3x bonus will not apply to the later extended
-period if they extend the lock-up further after the initial seven days, or veHNT is transfered to
-another staking position after the 7 day period.
+period if they extend the lock-up further after the initial ten days, or veHNT is transfered to
+another staking position after the 10 day period.
 
 ### Will I Earn HNT by Staking For veHNT?
 
