Clean up overview page. Add UTC time.

--- a/docs/solana/migration-overview.mdx
+++ b/docs/solana/migration-overview.mdx
@@ -15,8 +15,8 @@ import MigrationStatus from '@site/src/theme/MigrationStatus'
 
 Following the community-driven proposal,
 [HIP70 - Scaling the Helium Network](https://github.com/helium/HIP/blob/main/0070-scaling-helium.md),
-the Helium Network will migrate to the Solana blockchain on **April 18, 2023, 9am PST**. This
-strategic move, voted in by the community, aims to capitalize on Solana's scalability, low
+the Helium Network will migrate to the Solana blockchain on **April 18, 2023, 9am PST** (16:00 UTC).
+This strategic move, voted in by the community, aims to capitalize on Solana's scalability, low
 transaction costs, and high-performance capabilities, including its fast transaction throughput and
 energy-efficient consensus mechanism.
 
@@ -27,75 +27,13 @@ applications.
 
 <img className="docsheader" src={useBaseUrl('img/migration/migrationheader.png')} />
 
-<!-- ## Community & Discord
-
-The Helium Foundation is supported by community governance groups through the Solana Migration
-process. -->
-
-<!--TODO:  Efforts are underway to streamline the Discord experience for current and new members. -->
-
-<!-- ## Community Developers/Core Devs -->
-
-<!--TODO:  get help and join the conversation in discord channel -->
-<!--TODO:  check out the helium-progrma libraby on github -->
-
-<!-- Looking to learn more about Solana development? Check out the
-[Solana Discord Server](https://discord.com/invite/kBbATFA7PW) or review the
-[Solana Docs](https://docs.solana.com). -->
-
-<!-- ## Console Users -->
-
-<!--TODO: Console and Console API -->
-<!--TODO: chirpstack -->
-<!--TODO: openLNS -->
-
-<!-- ## Helium Wallet CLI & Ledger CLI Users -->
-
-<!--TODO:  wallet-cli -> more infomration soon -->
-<!--TODO:  ledger cli -> solana cli clone with helium derivation path -->
-
-<!-- ## HIP Voters -->
-
-<!--TODO:  thank for current process -->
-<!--TODO:  links to read about realms -->
-<!--TODO:  Vote Escrow Tokens -->
-<!--TODO:  subDAO governance -->
-
-<!-- ## Hotspot Operators -->
-
-<!--TODO:  link to migration guide -->
-<!--TODO:  hotspots to start earning IOT instead of HNT -->
-<!--TODO:  existing HNT remains HNT -->
-<!--TODO:  IOT TOken Premine -->
-
-<!-- ## Hotspot Vendors -->
-
-<!--TODO:  maker apps update guides -->
-
-<!-- ## LoRaWAN Roaming Partners -->
-
-<!--TODO:  openLNS and Helium Packet Router -->
-<!--TODO:  ?ask joey? -->
-
-<!-- ## Token Holders -->
-
-<!--TODO:  new Tokens, IOT/MOBILE/HNT -->
-<!--TODO:  what happens to HNT -->
-<!--TODO:  reading on SPL Tokens -->
-<!--TODO:  wallets and exchanges -->
-
-<!-- ## Validator Operators & Operators -->
-
-<!--TODO:  thank you for your service -->
-<!--TODO:  call to action for working group on running more Oracles -->
-
 ---
 
 :::info Why Solana?
 
 Read more about the
 [Helium Improvement Proposal](https://medium.com/helium-foundation/hip-70-helium-core-team-proposes-to-migrate-to-solana-e7ea23a042e7)
-and the process of evaluating layer 1 Blockchains on the
+and the process of evaluating layer 1 blockchains on the
 [Helium Foundation Blog](https://medium.com/helium-foundation/hip-70-evaluating-layer-1-blockchains-for-the-helium-network-15f81af6941c).
 
 :::
