--- a/docs/solana/migration/validator-operator.mdx
+++ b/docs/solana/migration/validator-operator.mdx
@@ -232,6 +232,7 @@ This is because the subDAO delegation of veHNT is a 0 or 100% all-or-nothing act
 
 Splitting positions after April 28 would mean that the veHNT transferred to the new part of the
 split does not inherit the 3x bonus multiplier. As this bonus multiplier only applies to positions
+created in the landrush period.
 
 Splitting as an action transfers some of the veHNT from one position to another new or existing
 position.
