--- a/docs/lorawan-on-helium/lorawan-roaming-getting-started.mdx
+++ b/docs/lorawan-on-helium/lorawan-roaming-getting-started.mdx
@@ -68,7 +68,7 @@ cp ../helium-config-service-cli/target/release/main .
    thing over and over again in later commands
 
    1. Run `./main env init`
-   1. Fill in `http://maininet-config/helium.io/6080` for `Config Service Host`
+   1. Fill in `http://maininet-config.helium.io:6080/` for `Config Service Host`
    1. Fill in the path `./keypair.bin` for `Keypair Location`
    1. Fill in your NET ID for `Net ID`
    1. Fill in your OUI for `Assigned OUI`
@@ -113,5 +113,5 @@ cp ../helium-config-service-cli/target/release/main .
 
 12. Lastly, define other relevant parameters for HTTP roaming. You can run
     ```bash
-    ./main route update hhtp --dedupe-timeout <dedupe-timeout> --path <url path> --auth-header <auth-header> --route-id <route-id> --commit
+    ./main route update http --dedupe-timeout <dedupe-timeout> --path <url path> --auth-header <auth-header> --route-id <route-id> --commit
     ```
