--- a/docs/vote-escrow/vehnt.mdx
+++ b/docs/vote-escrow/vehnt.mdx
@@ -59,7 +59,7 @@ initiatives aimed at integrating Helium technology into mobile devices and netwo
 ## Delegating veHNT
 
 To participate in subnetwork governance and earn rewards from the token emissions, veHNT holders
-must delegate their veHNT to one or both subDAOs. The lock-up period can range from six to 48
+must delegate their veHNT to one or both subDAOs. The lock-up period can range from 1 day to 48
 months, with longer lock-up periods resulting in a higher veHNT multiplier. Users can also adjust
 their delegations at any time to optimize their earnings from the subDAOs.
 
