--- a/docs/vote-escrow/vehnt.mdx
+++ b/docs/vote-escrow/vehnt.mdx
@@ -3,7 +3,7 @@ id: vehnt
 title: Helium veHNT Token
 pagination_label: veHNT
 sidebar_label: veHNT
-description: Helium IoT Network Token Documentation
+description: Helium veHNT Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /vote-escrow/vehnt
 ---
@@ -63,7 +63,7 @@ must delegate their veHNT to one or both subDAOs. The lock-up period can range f
 months, with longer lock-up periods resulting in a higher veHNT multiplier. Users can also adjust
 their delegations at any time to optimize their earnings from the subDAOs.
 
-veTokens can be managed through Realms using the in-app browser on the
+veTokens can be managed through [Realms](/vote-escrow/realms) using the in-app browser on the
 [Helium Wallet App](/wallets/helium-wallet-app):
 
 - [HNT DAO on Realms](https://app.realms.today/dao/HNT)
