--- a/docs/solana/migration/exchange.mdx
+++ b/docs/solana/migration/exchange.mdx
@@ -12,7 +12,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 :::warning Updated for Solana Mainnet
 
-The Migration Widget and description provided below have been updated to reflect Solana Mainnet.
+The [Migration Widget](https://docs.helium.com/solana/migration/exchange#mapping-helium-wallets-to-solana-wallets) 
+and description provided below have been updated to reflect Solana Mainnet.
 
 :::
 
@@ -126,7 +127,7 @@ after the Migration is complete.
 Since exchange wallets may not use the wallet app, the migration service can instead be used
 directly by following the below steps:
 
-For devnet:
+For mainnet:
 
 1. Get the Solana wallet address from a Helium wallet address:
    `https://migration.web.helium.io/helium/*helium-wallet-address*`
