--- a/docs/vote-escrow/realms.mdx
+++ b/docs/vote-escrow/realms.mdx
@@ -133,8 +133,8 @@ unlocking process. Another year after that, you can withdraw the tokens.
 
 ### Duration
 
-The duration of your cooldown is defined in days. The longer your tokens are staked, the greater the
-more veHNT will be issued. If you chose the 'Constant' lockup period, this duration takes affect
+The duration of your cooldown is defined in days. The longer your tokens are staked, the
+more veHNT will be issued. If you chose the 'Constant' lockup period, this duration takes effect
 after the 'Unlock' action is executed.
 
 While it is possible to set a higher duration than 4 years, no additional vote weight multiplier
@@ -174,7 +174,7 @@ Once a stake has been delegated, it can be undelegated in the same interface.
 
 <figure className="screensnippet-wrapper">
   <img src={useBaseUrl('/img/realms/delegate.png')} style={{ maxHeight: 300 }} />
-  <figcaption>veHNT positions can be delegated the IoT or Mobile network.</figcaption>
+  <figcaption>veHNT positions can be delegated to the IoT or the Mobile network.</figcaption>
 </figure>
 
 ### Splitting a Stake
@@ -191,7 +191,7 @@ losing the multiplier for the tokins being split or transfered off the position.
 Stakes can be transfered from one position into another within the same account. Positions can only
 be transfered to positions with a greater or equal duration. Only undelegated positions can be
 transfered. Staked tokens cannot be moved to other accounts. Landrush positions cannot be
-transfered. This functionality is useful for consolidating positions. If no other compatabile
+transfered. This functionality is useful for consolidating positions. If no other compatible
 positions exist in an account, the "Transfer" button will be disabled for a position.
 
 <figure className="screensnippet-wrapper">
