--- a/docs/vote-escrow/realms.mdx
+++ b/docs/vote-escrow/realms.mdx
@@ -133,9 +133,9 @@ unlocking process. Another year after that, you can withdraw the tokens.
 
 ### Duration
 
-The duration of your cooldown is defined in days. The longer your tokens are staked, the
-more veHNT will be issued. If you chose the 'Constant' lockup period, this duration takes effect
-after the 'Unlock' action is executed.
+The duration of your cooldown is defined in days. The longer your tokens are staked, the more veHNT
+will be issued. If you chose the 'Constant' lockup period, this duration takes effect after the
+'Unlock' action is executed.
 
 While it is possible to set a higher duration than 4 years, no additional vote weight multiplier
 will be added.
