note to close ledger live before starting migration

--- a/docs/solana/migration/ledger.mdx
+++ b/docs/solana/migration/ledger.mdx
@@ -38,6 +38,7 @@ these steps:
 3. Click `Experimental Features`
 4. Enable `Developer Mode`
 5. Install the Helium-Solana app as you normally would.
+6. Close Ledger Live
 
 ---
 
@@ -61,6 +62,12 @@ Your public key will change on Solana but the private key will remain the same.
   Live (ensure Developer Mode is enabled)
 - [Solana Ledger App](https://support.ledger.com/hc/en-us/articles/360016265659-Solana-SOL-?support=true)
   using Ledger Live
+
+:::note Close Ledger Live
+
+Before starting these steps, close the Ledger Live application or the migration will fail.
+
+:::
 
 import { LedgerMigration } from '@theme/LedgerMigration'
 
