--- a/docs/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing.mdx
@@ -10,13 +10,13 @@ slug: /mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing
 
 # Maker Approval and Auditing Process
 
-Due to the overwhelming demand for Hotspots, the community designed and approved a process for
-adding new, verified manufactures to the ecosystem.
+Due to the previous overwhelming demand for Hotspots, the community designed and approved a process 
+for adding new, verified manufactures to the ecosystem.
 [This is known has HIP-19](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers.md).
 With HIP-19 in place, companies can submit an application to be reviewed by the community and the
 [Helium Foundation](https://www.helium.foundation).
 
-The full process for approving and auditing new manafacturers is as follows
+The full process for approving and auditing new manufacturers is as follows
 ([originally outlined in this blog post](https://docs.helium.com/devblog/2021/01/26/maker-audit.html)):
 
 1. Makers submit a HIP-19 Proposal.
@@ -27,3 +27,6 @@ The full process for approving and auditing new manafacturers is as follows
    time
 6. Once Makers pass hardware audit, they are allowed to proceed to Network Integration.
 7. The final stage of Network Integration is being able to add Hotspots to the Onboarding Server.
+
+Note: Helium does not specifically endorse or recommend makers, manufacturers or vendors, it approves 
+the hotspots the makers produce can operate on the network to HIP 19 requirements.
