--- a/docs/hotspot-makers/maker-apps.mdx
+++ b/docs/hotspot-makers/maker-apps.mdx
@@ -18,8 +18,8 @@ Followed by a listing of the available Maker Apps.
 
 Beginning March 2022, all [HIP-19](https://github.com/dewi-alliance/hotspot-manufacturers#readme)
 Hotspot Manufacturers (aka Makers) are required to support their customers with a bespoke Mobile App
-to onboard their Hotspots, maintain their Hotspots with diagnostic tools, and various basic
-troubleshooting tools.
+to onboard their Hotspots, assert Hotspot locations and maintain their Hotspots with diagnostic tools, 
+and various basic troubleshooting tools.
 
 Maker Apps can also include extra enhancements such as Proof-of-Coverage analysis, earnings tools,
 and more.
@@ -46,9 +46,9 @@ Typescript.
 
 The [Maker Starter App](https://github.com/helium/maker-starter-app) includes support for
 deeplinking to the Helium Wallet App to sign transactions, removing any requirements for users to
-enter their 12-word seed phrase into the Maker App. **This is a security precaution and prevents
-potential lost of funds and Hotspots, as the seed phrase acts as a user's private key on the
-blockchain.** If you find a Maker app that asks for your seed phrase, do not trust it.
+enter their 12 or 24 word seed phrase into the Maker App. **This is a security precaution and 
+prevents potential lost of funds and Hotspots, as the seed phrase acts as a user's private key on 
+the blockchain.** If you find a Maker app that asks for your seed phrase, do not trust it.
 
 #### Features
 
@@ -56,7 +56,7 @@ The following features are supported in the Maker Starter App:
 
 - Add a Hotspot
 - Set a Location (including gain and elevation)
-- Transfer a Hotspot
+- Transfer a Hotspot (optional), Function is now available by transfering an NFT in the [Helium Wallet](/wallets/helium-wallet-app)
 - Settings with PIN Code and language selection
 - Deeplinking to [Helium Wallet](/wallets/helium-wallet-app) to sign transactions
 
@@ -78,7 +78,7 @@ vendor at the current time.
 
 - Hotspotty Connect documentation: https://docs.hotspotty.net/hotspotty-connect/
 
-This app requires connection to the new [Helium Wallet](/wallets/helium-wallet-app) and HNT funds in
+This app requires connection to the [Helium Wallet App](/wallets/helium-wallet-app) and HNT funds in
 the Maker Wallet or your Wallet to perform onboarding, location asserts, antenna, or height updates.
 
 When there is a need to change a Hotspot's Wifi connection without needing to connect to a Wallet,
@@ -188,12 +188,13 @@ As of March 2023 apps are
 
 ### FreedomFi
 
+FreedomFI hotspots can now use the Helium Hotspot App to onboard and manage
 - iOS App: https://apps.ios.com/us/app/freedomfi/id1608377889
 - Android App: https://play.google.com/store/apps/details?id=com.freedomfi.FreedomFiApp
 
 ---
 
-### Helium
+### Helium Hotspot - for OG and FreedomFI only
 
 - Discord : https://discord.gg/helium
 - iOS App: https://apps.apple.com/us/app/helium-hotspot/id1450463605
@@ -215,7 +216,7 @@ As of March 2023 apps are
 
 - Discord : https://discord.gg/wUk9nfFGZW
 - iOS App: https://apps.apple.com/app/hummingbird-hotspot/id1612429261
-- Android App: Download from Maker-Apps page
+- Android App: [Download from Maker-Apps page](https://xdt.com/app.html)
 
 ---
 
@@ -405,13 +406,10 @@ https://www.nebra.com/blogs/news/nebra-providing-updates-for-pycom-hotspots
 
 ### SyncroB.it
 
-- Discord : https://discord.gg/45dhnE3bdd
+Nebra have taken over support for SyncroB.it hotspots
+Please read the annoucement. 
+https://www.nebra.com/blogs/news/syncrobit-hotspots-join-nebra-family
 
-:::caution This Maker is in liquidation and unlikely to release an App.
-
-Check the Helium Discord for support by other vendors.
-
-:::
 
 ---
 
