--- a/docs/wallets/twelve-words.mdx
+++ b/docs/wallets/twelve-words.mdx
@@ -10,20 +10,19 @@ slug: /wallets/twelve-words
 
 # Twelve Word Seed Phrase
 
-When setting up a Helium wallet through the Helium Hotspot app, you are prompted to write down the
+When creating a Helium wallet through the Helium Hotspot app, you were prompted to write down the
 12-word seed phrase. These are the mnemonic phrase generated from the private key of your wallet and
-the only way to access the wallet.
+the only way to access the wallet. 
+The Helium Hotspot App is now no longer used for creating or managing wallets.
 
-The 12-word seed can be used or imported on both the
-[Helium Hotspot App](/mine-hnt/helium-hotspot-app) and the
-[Helium Wallet App](/wallets/helium-wallet-app). You cannot import a 24-word seed phrase in the
-Helium Hotspot App, these will only work in the Helium Wallet App. Hotspots sent to a 24-word wallet
-can only be managed/transferred by the Hotspot Maker app or the CLI Wallet.
+The 12-word seed phrase can be imported in the [Helium Wallet App](/wallets/helium-wallet-app). 
+You can still see the previously created 12-word phrase in the Helium Hotspot app. 
+Select > Settings Icon > Reveal Words.
 
 :::warning
 
-The 12-word can never be recovered if they are lost, and they are the sole key to accessing your
-wallet, the HNT it contains, and all access to your Hotspot and its rewards. Lose the 12-word, lose
+The 12-words can never be recovered if they are lost, and they are the sole key to accessing your
+wallet, the HNT it contains, and all access to your Hotspot and its rewards. Lose the 12-words, lose
 it all. You are not able to log into your account without them, nor can you transfer HNT or a
 Hotspot to a different account without them.
 
@@ -41,28 +40,29 @@ words and you lose your access to your HNT and your Hotspots and their future ea
 help you recover them.
 
 Luckily, there is an easy way to back up those 12 words. Write them down, save them, and back them
-up. Go to the Helium Hotspot App > … menu > Reveal Words.
+up. Go to the Helium Hotspot App You can still see the previously created 12-word phrase in the Helium 
+Hotspot app. Select > Settings Icon > Reveal Words.
 
 :::note
 
-Do not log out of your phone wallet or uninstall the app without first writing down your 12-word
+Do not log out of your phone wallet or uninstall the app without first writing down your 12 words
 
 :::
 
-The only places you are required to enter your 12-word are:
+The only places you were ever required to enter your 12 words are:
 
-1. The [Helium Hotspot App](/mine-hnt/helium-hotspot-app) - on your phone
-2. The [Helium Wallet App](/wallets/helium-wallet-app) - on your phone
-3. The [CLI Wallet](/wallets/cli-wallet) - on your computer
-4. The [Ledger Wallet](/wallets/ledger) - on your computer or phone NEVER enter them into a website.
+1. The [Helium Wallet App](/wallets/helium-wallet-app) - on your phone 
+2. The [Helium Hotspot App](/mine-hnt/helium-hotspot-app) - on your phone - this function is now disabled
+3. The [CLI Wallet](/wallets/cli-wallet) - on your computer - this is being discontinued
+4. The [Ledger Wallet](/wallets/ledger) - on your computer or phone **NEVER enter them into a website.
 
-When entering the 12-word make sure you:
+When entering the 12 words make sure you:
 
 1. Enter them in the right order
 2. Get the spelling correct. Check words here for correct spelling:
    [https://github.com/bitcoin/bips/blob/master/bip-0039/english.txt](https://github.com/bitcoin/bips/blob/master/bip-0039/english.txt)
 
-No Helium Support or Admin person will EVER ask for your 12 or 24-word or ask you to enter them into
+No Helium Support or Admin person will EVER ask for your 12 or 24 words or ask you to enter them into
 a website to fix a problem.
 
 :::note
