--- a/docs/vote-escrow/vehnt.mdx
+++ b/docs/vote-escrow/vehnt.mdx
@@ -30,9 +30,13 @@ participate in network governance and decision-making. veHNT is the only way to 
 Network. The primary purpose of veHNT is to incentivize long-term commitment to the network and
 align stakeholders' interests with the network's long-term success.
 
-veHNT is not a separate token but rather a derivative of HNT with its value tied to HNT. The amount
-of veHNT received when locking HNT depends on the lock-up period chosen by the user, with longer
-lock-up periods resulting in a higher veHNT multiplier.
+veHNT is not a separate token but rather a derivative of HNT. The amount of veHNT received when 
+locking HNT depends on the lock-up period chosen by the user, with longer lock-up periods resulting 
+in a higher veHNT multiplier.
+
+veHNT does not increase in value, nor does holding veHNT increase the amount of veHNT you own.
+When your staking lockup period ends you receive back 1 for 1 the amount of HNT you locked-up in
+veHNT.
 
 ## SubDAOs
 
@@ -40,9 +44,9 @@ The Helium Network serves as the overarching system that enables a multitude of 
 to exist via the novel incentive mechanism of HNT.
 
 Each subDAO governs a specific area of the network and receives a portion of the network's token
-emissions, distributed among veHNT holders who have delegated their veHNT to that subDAO. The
-distribution of tokens is determined by the amount of veHNT delegated to each subDAO and the
-individual lock-up periods. Initially, two subDAOs are introduced: IOT and MOBILE.
+emissions, distributed proportionaly among veHNT holders who have delegated their veHNT to that 
+subDAO. The distribution of tokens is determined by the amount of veHNT delegated to each subDAO 
+and the individual lock-up periods. Initially, two subDAOs are introduced: IOT and MOBILE.
 
 ### IOT subDAO
 
@@ -58,10 +62,10 @@ initiatives aimed at integrating Helium technology into mobile devices and netwo
 
 ## Delegating veHNT
 
-To participate in subnetwork governance and earn rewards from the token emissions, veHNT holders
-must delegate their veHNT to one or both subDAOs. The lock-up period can range from 1 day to 48
-months, with longer lock-up periods resulting in a higher veHNT multiplier. Users can also adjust
-their delegations at any time to optimize their earnings from the subDAOs.
+To earn rewards from the token emissions, veHNT holders must delegate their veHNT to one or more 
+subDAOs. The lock-up period can range from 1 day to 48 months, with longer lock-up periods resulting 
+in a higher veHNT multiplier. Users can also adjust their delegations at any time to optimize their 
+earnings from the subDAOs.
 
 veTokens can be managed through [Realms](/vote-escrow/realms) using the in-app browser on the
 [Helium Wallet App](/wallets/helium-wallet-app):
@@ -74,6 +78,8 @@ veTokens can be managed through [Realms](/vote-escrow/realms) using the in-app b
 
 SubDAO rewards are calculated and paid to the lock-up position each 24hr reward period. Currently,
 the IOT and MOBILE subDAO each have a 6% token emission pool for veHNT stakers.
+This is not a 6% return for staking but the amount of tokens emitted per 24 hour epoch that goto
+veHNT delegators. This 6% is shared proportionaly amongst all veHNT delegated to that subDAO.
 
 **subDAO rewards may increase when:**
 
