--- a/docs/community-governance/community-governance.mdx
+++ b/docs/community-governance/community-governance.mdx
@@ -28,15 +28,16 @@ Network. It is also the primary venue to get support for using the Network.
 
 The Helium Community uses a governance mechanism called **Helium Improvement Proposals** (known as
 "HIPs"). Modeled on BIPs from the Bitcoin community, HIPs are used to introduce, debate, and
-approve/reject new changes to major elements of the Network like the core blockchain, $HNT token
-economics, and Network governance itself.
+approve/reject new changes to major elements of the Network like the core blockchain, $HNT, $IOT 
+$MOBILE token economics, and Network governance itself.
 
 In the earliest phases it's best to vet an idea with the Helium community
 [via Discord](https://discord.gg/helium). This is a good way to see if there is initial support for
 the idea, or if it's been discussed before.
+Start new HIP ideas in the hip-discussion channel in the Improvement Proposals folder
 
 HIPs are managed entirely from the [HIP GitHub repository](https://github.com/helium/HIP). HIP
-discussion also happens in the `Improvement Proposal` section of
+discussion also happens in the `Improvement Proposal` folder of
 [Helium Discord](https://discord.gg/helium). Any and all members of the Helium Community are
 encouraged to create HIPs, and participate in the governance process.
 
@@ -50,15 +51,15 @@ Wednesday of each month at 12PM ET**. Each call has an open agenda, and any comm
 join and add items to the agenda to be discussed.
 
 - [Community Call Notes and Agenda](https://docs.google.com/document/d/1bMm2alBigBj3detA775Dn0Gz9UM5XczAeK9vnjBB3l0/edit#)
-- [Video recordings of all previous community calls](https://vimeo.com/dewialliance)
+- [Video recordings of previous community calls](https://vimeo.com/dewialliance) some are linked in the Community Call notes.
 
 ## Social Media
 
 Helium is everywhere. Here's the full list:
 
 - [Twitter](https://twitter.com/helium)
-- [Telegram](https://t.me/helium_network)
 - [Reddit](https://www.reddit.com/r/HeliumNetwork/)
 - [LinkedIn](https://www.linkedin.com/company/heliuminc/)
 - [Facebook](https://www.facebook.com/heliumsystems)
 - [Instagram](https://www.instagram.com/helium/)
+- [Telegram](https://t.me/helium_network) Currently Read Only
