--- a/docs/faq/helium-network.mdx
+++ b/docs/faq/helium-network.mdx
@@ -13,13 +13,24 @@ slug: /faq/helium-network
 ### What is the Helium Network?
 
 Helium is a global, distributed network of Hotspots that create public, long-range wireless coverage
-for Internet of Things (IoT) devices. Hotspots mine and are rewarded in HNT, the native
-cryptocurrency of the Helium blockchain. The Helium blockchain is an open source, public blockchain
-that incentivizes the creation of physical, decentralized wireless networks.
+for Internet of Things (IoT) devices. Hotspots mine and are rewarded in IOT, a cryptocurrency now on
+the Solana blockchain. 
 
-Today, the Helium blockchain, and its hundreds of thousands of Hotspots deployed by a global
+Today, the Helium ecosystem, and its hundreds of thousands of Hotspots deployed by a global
 community, provide access to the largest decentralized wireless network in the world.
 [Here’s a helpful introduction video](https://youtu.be/Vx9YyS7-d3g).
+
+### Why is the Helium Network called The People’s Network?
+
+We call it The People’s Network because the people who deploy Hotspots build and operate the
+network. It’s powered by them and owned by them.
+
+### Who governs the Helium Network and what is the Helium Foundation?
+
+The Helium Foundation is a global not-for-profit dedicated to the proliferation of secure,
+cost-effective connectivity and it manages and maintains the open technologies that support the
+Helium Network. You can read more about governance from Helium Foundation
+[here](https://helium.foundation).
 
 ### How does the Hotspot work and what does it power?
 
@@ -28,55 +39,40 @@ of Things (IoT) devices, from smart pet collars and home delivery systems, to sm
 scooters, medical transport and tracking devices, cooling systems, smart lighting systems, and more.
 [Here’s a helpful video about how Helium works](https://www.youtube.com/watch?v=67aQeZTaqNY).
 
-### Can I connect my phone or computer to Hotspots?
+### Does Helium replace the Wi-Fi in my house?
 
-Yes. As of early 2022 the community has started to roll out
-[4G/LTE and 5G coverage on the Helium blockchain](https://www.helium.com/5G).
+No. Hotspots receive radio signals and route packets from low-power devices in your area that use
+LoRaWAN, a wireless protocol, and have been deployed to the Helium Network. Typically these
+are devices such as GPS trackers, environmental sensors, weather meters, etc., that only need to
+transmit and share small bits of information. The Hotspot uses your existing Internet (via WiFi or
+Ethernet) to deliver the data packets sent by devices. It does not replace internet or cellular
+service for regular devices like computers and smartphones
 
 ### If I connect the Hotspot to my Wifi, am I breaking the terms of service with my Internet provider?
 
 The Helium Network is not in the position or business of giving legal advice. In general, users
 should check the terms with individual providers and comply with applicable law.
 
-### Does Helium partner with Internet providers?
-
-Yes. In fact, Helium recently partnered with DISH, a nationwide provider of internet connectivity,
-to expand 5G coverage.
-[You can learn more about this news here](https://ir.dish.com/news-releases/news-release-details/dish-partners-helium-leverage-helium-networks-blockchain-model).
-
-### Does Helium replace the Wi-Fi in my house?
-
-No. Hotspots create a Long-Fi radio signal and routes packets from low-power devices in your area
-that use LoRaWAN, a wireless protocol, and have been deployed to the Helium Network. Typically these
-are devices such as GPS trackers, environmental sensors, weather meters, etc., that only need to
-transmit and share small bits of information. The Hotspot uses your existing Internet (via WiFi or
-Ethernet) to deliver the data packets sent by devices. It does not replace internet or cellular
-service for regular devices like computers and smartphones.
-
-### Why is the Helium Network called The People’s Network?
-
-We call it The People’s Network because the people who deploy Hotspots build and operate the
-network. It’s powered by them and owned by them.
-
 ### How far does the Helium Network reach and does it use radio frequency?
 
 Helium’s LoRaWAN technology, the combination of the Helium blockchain and LoRaWAN wireless protocol,
-uses sub-GHz radio frequency. Depending on conditions, Helium LoRaWAN can reach miles and even
-connect devices that are inside buildings unlike GPS and cellular signals.
+uses sub-GHz radio frequency between 860 and 923 MHz. Depending on conditions, Helium LoRaWAN can 
+reach dozens of miles or kilometers and even connect devices that are inside buildings unlike GPS and 
+cellular signals.
 
 ### What kind of cryptocurrency do I earn?
 
-Hotspot owners earn HNT tokens that are unique to the Helium blockchain.
+Hotspot owners earn IOT tokens on the Solana Blockchain
 
-### How do Hotspots earn HNT?
+### How do Hotspots earn IOT?
 
-Hotspots earn HNT by providing wireless coverage and transferring data from nearby devices. The more
-data transferred the larger the reward.
-[Here’s a helpful video about how HNT works](https://www.youtube.com/watch?v=B0JOB88MHSI).
+Hotspots earn IO by providing wireless coverage and transferring data from nearby devices. The more
+data transferred the larger the reward. Previously hotspots used to earn HNT tokens and
+[Here’s a helpful video about how HNT worked](https://www.youtube.com/watch?v=B0JOB88MHSI).
 
-### How much HNT will I earn?
+### How much IOT will I earn?
 
-Hotspot owners earn HNT depending on how frequently their devices do two things:
+Hotspot owners earn IOT depending on how frequently their devices do two things:
 
 - Validate the Network - Hotspots transmit data to each other to confirm that the Network is secure
   and owners receive rewards when their Hotspot participates in a process called Proof of Coverage.
@@ -91,17 +87,21 @@ Hotspot owners earn HNT depending on how frequently their devices do two things:
 ### What if I'm in a rural area, or the only Hotspot in my area? Can I still earn rewards?
 
 It's best to have at least one or two other Hotspots within radio range of you so that you can
-participate in Proof of Coverage Challenges to earn HNT rewards at a higher rate. If you are the
-only Hotspot in your area, you can still earn HNT if a device uses your Hotspots and by initiating
-the Challenges. HNT is distributed based on these economics. Read more about token economics
-[here](https://www.helium.com/token).
+participate in Proof of Coverage Challenges to earn IOT rewards at a higher rate. If you are the
+only Hotspot in your area, you will earn IOT if a device uses your Hotspots connection to transfer
+sensor data back to the sensor users. IOT is distributed based on these economics. Read more about 
+token economics [here](https://www.helium.com/token).
 
-### Who governs the Helium Network and what is the Helium Foundation?
+### Can I connect my phone or computer to Hotspots?
 
-The Helium Foundation is a global not-for-profit dedicated to the proliferation of secure,
-cost-effective connectivity and it manages and maintains the open technologies that support the
-Helium Network. You can read more about governance from Helium Foundation
-[here](https://helium.foundation).
+Yes. As of early 2022 the community has started to roll out 5G-CBRS hotspots in the USA
+[4G/LTE and 5G coverage on the Helium blockchain](https://www.helium.com/5G).
+
+### Does Helium partner with Internet providers?
+
+Yes. In fact, Helium recently partnered with DISH, a nationwide provider of internet connectivity,
+to expand 5G coverage.
+[You can learn more about this news here](https://ir.dish.com/news-releases/news-release-details/dish-partners-helium-leverage-helium-networks-blockchain-model).
 
 ### Does the Helium community have a Discord?
 
