typos and clarification

--- a/docs/vote-escrow/vehnt.mdx
+++ b/docs/vote-escrow/vehnt.mdx
@@ -34,10 +34,6 @@ veHNT is not a separate token but rather a derivative of HNT. The amount of veHN
 locking HNT depends on the lock-up period chosen by the user, with longer lock-up periods resulting 
 in a higher veHNT multiplier.
 
-veHNT does not increase in value, nor does holding veHNT increase the amount of veHNT you own.
-When your staking lockup period ends you receive back 1 for 1 the amount of HNT you locked-up in
-veHNT.
-
 ## SubDAOs
 
 The Helium Network serves as the overarching system that enables a multitude of networks (subDAOs)
@@ -77,9 +73,8 @@ veTokens can be managed through [Realms](/vote-escrow/realms) using the in-app b
 ### Impacts to subDAO Rewards
 
 SubDAO rewards are calculated and paid to the lock-up position each 24hr reward period. Currently,
-the IOT and MOBILE subDAO each have a 6% token emission pool for veHNT stakers.
-This is not a 6% return for staking but the amount of tokens emitted per 24 hour epoch that goto
-veHNT delegators. This 6% is shared proportionaly amongst all veHNT delegated to that subDAO.
+the IOT and MOBILE subDAO each have a 6% token emission pool for veHNT stakers. This 6% is shared 
+proportionaly amongst all veHNT delegated to that subDAO at the end of each epoch.
 
 **subDAO rewards may increase when:**
 
