Ledger migration requires Chrome/Brave/HID support
Once again the people ignore the best browser of all time, Firefox

--- a/docs/solana/migration/ledger.mdx
+++ b/docs/solana/migration/ledger.mdx
@@ -55,7 +55,7 @@ migration process.
 
 ## Migration Tool
 
-Your public key will change on Solana but the private key will remain the same.
+Your public key will change on Solana but the private key will remain the same. Note this app only works with Chrome, Brave, or other Chromium-based web browsers.
 
 - [Helium-Solana Ledger App](https://github.com/helium/app-helium-solana) now available from Ledger
   Live (ensure Developer Mode is enabled)
